--- a/index.html
+++ b/index.html
@@ -44,22 +44,22 @@ body {
 
 
 .slide:first-child {
-  background: url("1.jpg") no-repeat
+  background: url("./gallery/1.jpg") no-repeat
     center top/cover;
 }
 
 .slide:nth-child(2) {
-  background: url("2.png") no-repeat
+  background: url("./gallery/2.png") no-repeat
     center top/cover;
 }
 
 .slide:nth-child(3) {
-  background: url("3.png") no-repeat
+  background: url("./gallery/3.png") no-repeat
     center top/cover;
 }
 
 .slide:nth-child(4) {
-  background: url("4.png") no-repeat
+  background: url("./gallery/4.png") no-repeat
     center top/cover;
 }
 
