--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@ body {
 }
 
 
+
 .buttons button#prev {
   position: absolute;
   top: 50%;
@@ -77,6 +78,17 @@ body {
 }
 
 .buttons button {
+  /* border: 2px solid #e5ebf3;
+  background-color: transparent;
+  color: #e5ebf3;
+  cursor: pointer;
+  padding: 13px 15px;
+  border-radius: 50%;
+  outline: none; */
+  display: none;
+}
+
+.buttons button:hover {
   border: 2px solid #e5ebf3;
   background-color: transparent;
   color: #e5ebf3;
@@ -84,11 +96,6 @@ body {
   padding: 13px 15px;
   border-radius: 50%;
   outline: none;
-}
-
-.buttons button:hover {
-  background-color: #e5ebf3;
-  color: #362a2b;
 }
 
 @media (min-width: 640px) and (min-height: 640px) {
@@ -131,7 +138,7 @@ body {
     const nextButton = document.getElementById("next");
     const prevButton = document.getElementById("prev");
     const auto = true;
-    const intervalTime = 5000;
+    const intervalTime = 10000;
     let slideInterval;
 
     const nextSlide = () => {
