--- a/index.html
+++ b/index.html
@@ -48,25 +48,25 @@
 
         .slide:first-child {
         background: url("./gallery/1.jpg") no-repeat
-            center top/cover;
+            center center/cover;
         background-size:contain;
         }
 
         .slide:nth-child(2) {
         background: url("./gallery/2.png") no-repeat
-            center top/cover;
+            center center/cover;
         background-size:contain;
         }
 
         .slide:nth-child(3) {
         background: url("./gallery/3.png") no-repeat
-            center top/cover;
+            center center/cover;
         background-size:contain;
         }
 
         .slide:nth-child(4) {
         background: url("./gallery/4.png") no-repeat
-            center top/cover;
+            center center/cover;
         background-size:contain;
         }
 
@@ -89,6 +89,7 @@
         background-color: transparent;
         color: #e5ebf3;
         cursor: pointer;
+        transform: translateY(-50%);
         padding: 13px 15px;
         border-radius: 50%;
         outline: none;
