--- a/index.html
+++ b/index.html
@@ -70,6 +70,18 @@
         background-size:contain;
         }
 
+        .slide:nth-child(5) {
+        background: url("./gallery/5.jpg") no-repeat
+            center center/cover;
+        background-size:contain;
+        }
+
+        .slide:nth-child(6) {
+        background: url("./gallery/6.jpg") no-repeat
+            center center/cover;
+        background-size:contain;
+        }
+
 
 
         .buttons button#prev {
@@ -136,6 +148,8 @@
    <!-- Number here corresponds to number of images -->
   <div class="slider">
     <div class="slide current"></div>
+    <div class="slide"></div>
+    <div class="slide"></div>
     <div class="slide"></div>
     <div class="slide"></div>
     <div class="slide"></div>
