--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         }
 
 
+        /* Images in gallery  */
         .slide:first-child {
         background: url("./gallery/1.jpg") no-repeat
             center center/cover;
@@ -83,7 +84,7 @@
         }
 
 
-
+        /* Buttons to navigate carousel */
         .buttons button#prev {
         position: absolute;
         top: 50%;
@@ -96,25 +97,29 @@
         right: 1rem;
         }
 
+        /* Default button styling (when hovering over the image) */
         .buttons button {
         border: 2px solid #e5ebf3;
-        background-color: transparent;
-        color: #e5ebf3;
+        background-color: #e5ebf346;
+        color: #362a2b;
         cursor: pointer;
         transform: translateY(-50%);
         padding: 13px 15px;
         border-radius: 50%;
         outline: none;
+
         opacity: 0;
         transition: opacity 0.2s ease, background-color 0.2s ease, color 0.2s ease
         }
 
+        /* Make buttons visible when hovering over the image */
         .slider:hover + .buttons button {
         opacity: 1;
         visibility: visible;
         
         }
-
+        
+        /* Change styling when hoving over buttons */
         .buttons button:hover {
         opacity: 1;
         visibility: visible;
@@ -145,7 +150,7 @@
 
 <body>
   <!-- partial:index.partial.html -->
-   <!-- Number here corresponds to number of images -->
+   <!-- Number of "slides" here corresponds to number of images -->
   <div class="slider">
     <div class="slide current"></div>
     <div class="slide"></div>
