--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
         /* Default button styling (when hovering over the image) */
         .buttons button {
-        border: 2px solid #e5ebf3;
+        border: transparent;
         background-color: #e5ebf37e;
         color: #362a2b;
         cursor: pointer;
