--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 /* ------------- UPDATE ------------------------------ */
         /* Images in gallery  */
         .slide:first-child {
-        background: url("./gallery/1.jpg") no-repeat
+        background: url("./gallery/1.png") no-repeat
             center center/cover;
         background-size:contain;
         }
