--- a/index.html
+++ b/index.html
@@ -91,6 +91,12 @@
         background-size:contain;
         }
 
+        .slide:nth-child(8) {
+        background: url("./gallery/8.png") no-repeat
+            center center/cover;
+        background-size:contain;
+        }
+
 /* ------------------------------------------------------- */
 
         /* Buttons to navigate carousel */
@@ -164,6 +170,7 @@
 <!-- ---------- UPDATE ------------------------->
   <div class="slider">
     <div class="slide current"></div>
+    <div class="slide"></div>
     <div class="slide"></div>
     <div class="slide"></div>
     <div class="slide"></div>
