--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         }
 
         .slide:nth-child(6) {
-        background: url("./gallery/6.jpg") no-repeat
+        background: url("./gallery/6.png") no-repeat
             center center/cover;
         background-size:contain;
         }
@@ -93,6 +93,18 @@
 
         .slide:nth-child(8) {
         background: url("./gallery/8.png") no-repeat
+            center center/cover;
+        background-size:contain;
+        }
+
+        .slide:nth-child(9) {
+        background: url("./gallery/9.png") no-repeat
+            center center/cover;
+        background-size:contain;
+        }
+
+        .slide:nth-child(10) {
+        background: url("./gallery/10.jpg") no-repeat
             center center/cover;
         background-size:contain;
         }
@@ -170,6 +182,8 @@
 <!-- ---------- UPDATE ------------------------->
   <div class="slider">
     <div class="slide current"></div>
+    <div class="slide"></div>
+    <div class="slide"></div>
     <div class="slide"></div>
     <div class="slide"></div>
     <div class="slide"></div>
